Don't track element_id_to_*_animations_ maps on non-sync trees

For the active tree, the element_id_to_*_animations_ maps were not being
cleared, ever. The only code that cleared them was
LayerTreeImpl::UpdatePropertyTreeAnimationFromMainThread which was only
called for the sync tree (which is usually the pending tree). However,
they also aren't used on the active tree.

To fix this, only track them on the sync tree.

Bug: 916512
Change-Id: Ib9cae536ff38fb84700934c9aed9216311932c9c
Reviewed-on: https://chromium-review.googlesource.com/c/1403334
Reviewed-by: vmpstr <vmpstr@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622582}
Former-commit-id: d362daef89cdaaf03ff8e474119122bf121d2689